--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,13 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@scss/*": ["scss/*"],
+      "@public/*": ["public/*"],
+      "@store/*": ["store/*"],
+      "@components/*": ["components/*"],
+      "@const": ["const.js"],
+      "@libs": ["libs.js"],
     }
   }
 }
