--- a/package.json
+++ b/package.json
@@ -3,18 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "server": "nodemon server.js",
+    "client": "next dev",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "classnames": "^2.3.2",
+    "graphql-request": "^6.1.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-yoga": "^5.0.0",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "yelp-fusion": "^3.0.0"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.3.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "nodemon": "^3.0.1",
+    "sass": "^1.69.5"
   }
 }
