--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     }
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.7",
     "classnames": "^2.3.2",
     "graphql-request": "^6.1.0",
